# server/item.router.js
@@ -3,7 +3,7 @@ const router = express.Router();
 const mongoose = require("mongoose");
 const Item = require("./item.model.js");
 
-router.delete("/items/:itemId", (req,res) => {
+router.delete("/:itemId", (req, res) => {
     Item.deleteOne({"_id" : mongoose.Types.ObjectId(req.params.itemId)}, (err)=> {
         if(err){
             console.log(err);
@@ -15,7 +15,7 @@ router.delete("/items/:itemId", (req,res) => {
 });
 
 
-router.post("/items", (req, res) => {
+router.post("/", (req, res) => {
     const props = {
         imgSrc: "google.com",
         title: "phone red",
@@ -35,10 +35,10 @@ router.post("/items", (req, res) => {
 });
 
   /**
-   * GET item with id
+    Returns and item
    */
   
-  router.get("/items/:itemId",(req, res)=>{
+  router.get("/:itemId", (req, res) => {
     Item.findById(req.params.itemId, function (err, item){
         if(err){
             console.log("Error", err);
@@ -52,7 +52,7 @@ router.post("/items", (req, res) => {
 /**
  * GET all items
  */
-router.get("/items",(req, res)=>{
+router.get("/",(req, res)=>{
     Item.find({}, function(err, items){
         if(err){
             console.log("Error", err);
